--- a/eclipse-build/ChangeLog
+++ b/eclipse-build/ChangeLog
@@ -13,6 +13,10 @@
 	* dependencies.properties: Remove org.apache.lucene entry.
 	* build.xml: apply remove-lucene-dependency.patch patch.
 
+2011-08-22  Sami Wagiaalla  <swagiaal@redhat.com> 
+
+	* build.xml: Set buildDirectory relative to plugins directory.
+
 2011-08-18  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* pdebuild.xml: Created new target copyDeps.
